--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,7 @@ body{
     grid-template: 2fr 3fr 1fr/ 1fr 2fr 1fr;
 }
 .items{
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
