--- a/src/style.css
+++ b/src/style.css
@@ -95,3 +95,27 @@ body{
     color: rgb(9, 9, 94);
     font-size: 2.5rem;
 }
+.homeScreen{
+    position: absolute;
+    color: white;
+    background-image: url(https://images.unsplash.com/photo-1675750318176-98573021fc30?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);
+    background-color: rgb(0, 0, 0);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+#clock {
+    font-size: 5rem;
+  }
+footer,a{
+    color: rgb(110, 104, 104);
+    text-decoration: none;
+    position: absolute;
+    bottom: 0;
+}
