--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ body{
     width: 80%;
     height: 2.5rem;
     border: none;
-    background-color: coral;
+    background-color: #464d5f;
 }
 #form{
     gap: 10px;
